--- a/semana9/todolist/package.json
+++ b/semana9/todolist/package.json
@@ -10,8 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "firebase": "^10.11.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
